--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         content="Joki Tugas Sekolah & Kuliah Sistem Informasi - Tepat waktu, privasi aman, ada preview">
     <title>Joki Teman Nugas - Joki Tugas Sekolah & Kuliah Sistem Informasi</title>
     <link rel="stylesheet" href="style.css">
-    <meta name="google-site-verification" content="TMxz4aeD9tiIj5bXLX3J8OchDLBlfH_fi2h8QyFcAi4" />
+    <meta name="google-site-verification" content="TMxz4aeD9tiIj5bXLX3J8OchDLBlfH_fi2h8QyFcAi4"> 
 </head>
 
 <body>
